[project]
name = "apscheduler-exporter"
version = "0.2.1"
description = "A Prometheus exporter for APScheduler metrics"
readme = "README.md"
authors = [
    { name = "CNFilms", email = "technique@cinego.net" }
]
keywords = ["apscheduler", "prometheus", "metrics", "monitoring"]
requires-python = ">=3.9"
dependencies = [
    "apscheduler>=3.11.0",
    "prometheus-client>=0.24.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.1",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
    "N",
]

[[tool.mypy.overrides]]
module = ["apscheduler.*"]
follow_untyped_imports = true

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
